Bug Fix | Overlap Spotlight | Changed min-width to max-width on media q

--- a/src/modules/overlap-spotlight/_style.scss
+++ b/src/modules/overlap-spotlight/_style.scss
@@ -6,7 +6,7 @@
         background-color: white;
         padding: $wsu-spacing--xmedium;
     }
-    @media screen and ( min-width: $wsu-breakpoint--tablet-medium ) {
+    @media screen and ( max-width: $wsu-breakpoint--tablet-medium ) {
         .wsu-overlap-spotlight__caption.wsu-dropshadow--medium{
             box-shadow: none !important;
         }
